
=======================================================
		WanT code:  Log of Changes 
=======================================================


01 Apr 2014     bug fixed in the calculation of projdos when using non-orthogonal
		orbitals. (AF)

23 Aug 2013     workaround for gfortran introduced in overlap_calc (problems
		with ZDOTC). Another fix related to gfortran iostat in
		namelists added to postprocs. (AF)

22 Aug 2013     updates on modules concerning low-level parallelism (from QE),
		configuration, ext lib (eg lapack) management in order to avoid
		problems with gfortran. (AF) 

04 Aug 2013     positions of the atmproj orbitals reconstructed in unfold.f90
		for the sake of determining the orb_mapping. (AF)

02 Aug 2013     unfold.x utility further tested and debugged (especially when
		working with ATMPROJ basis). Test18 updated. (AF)

31 Jul 2013     tests (test16 in particular) updated. (AF)

17 Jun 2013     Compilation bugs fixed (courtesy of Marco Gibertini). 
		Segmentation fault fixed in init_us_1 when having pseudos with 
		q_with_l = .TRUE. Pointed out byu Marco Gibertini. (AF)

15 Jun 2013     Plotting of the fermi surface upon wannier interpolation added. (AF)

13 Jun 2013     Nasty bug fixed in atmproj module (showing when alat != |a1| ). (AF)

10 Jun 2013     atmproj module updated according to the filtering+shifting 
		algorithm (courtesy of Luis Agapito). (AF)

15 May 2013     bug fixed in the parallel I/O of bands.x. (AF)

07 May 2013     parser_replica routine updated allowing for skip symbol x.
		Transport read_matrix routine updated accordingly. (AF)

17 Apr 2013     clibs and wlibs renamed to clib and baselib. (AF)

13 Mar 2013     Tag WanT-2_5_0_alpha2  added to repository. (AF)

12 Mar 2013     Bug fixed in atmproj module (spin polarized case). test16 further updated. (AF)

11 Mar 2013     atmproj module updated to work with bands.x and dos.x . (AF)
